# WikiGraph-Explorer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  vcpkg.json
src/: main.cpp
src/DataLoader/: DataLoaderBase.h  DataLoaderManager.cpp  DataLoaderManager.h  LinkLoader.cpp  LinkLoader.h  LinkTargetLoader.cpp  LinkTargetLoader.h  PageLoader.cpp  PageLoader.h
src/DataLoader/FileReader/: AsyncLineReader.cpp  AsyncLineReader.h  ParallelLineReader.cpp  ParallelLineReader.h  SQLParserUtils.cpp  SQLParserUtils.h
src/FetchWikiData/: DownloadWikiDump.cpp  DownloadWikiDump.h  FetchWikiStats.cpp  FetchWikiStats.h
src/Log/: FileLog.cpp  FileLog.h
src/PageGraph/: PageGraph.cpp  PageGraph.h
src/UI/: UI.cpp  UI.h  UIBase.h  WikiSelectUI.cpp  WikiSelectUI.h
src/Utils/: Hashmap.h  Hashmap.h.in  PathUtils.cpp  PathUtils.h  WThreadPool.h
